# miden-client

./: .gitignore  .gitmodules  .prettierignore  .taplo.toml  .typos.toml  AUCTION_PLAN.md  CHANGELOG.md  CHANGELOG_FORMAT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Changelog.Format.md  Improvements.Errors.md  Improvements.md  Makefile  MidenAdapterProvider.md  Migrations.Client.md  Node.Impl.md  Node.Support.md  README.md  changes.diff  checksums.txt  clippy.toml  eslint.config.js  installer-checksums.txt  miden-daily-update-2026-04-07.md  migration-automation.md  package-lock.json  package.json  rust-toolchain.toml  zizmor.yml
contracts/consume-asset-script/: Cargo.toml
contracts/consume-asset-script/src/: lib.rs
crates/bindings-macro/: Cargo.toml
crates/bindings-macro/src/: lib.rs
crates/client-service/: Cargo.toml
crates/client-service/src/: awaiters.rs  config.rs  coordinator.rs  errors.rs  events.rs  handlers.rs  lib.rs  syncer.rs  test_utils.rs  tx_queue.rs
crates/idxdb-store/: Cargo.toml  README.md  build.rs  prepare-publish.sh
crates/idxdb-store/src/: .gitignore  README.md  auth.rs  encryption.rs  lib.rs  mod.rs  package.json  smt_forest.rs  tsconfig.json  tsconfig.tsbuildinfo
crates/idxdb-store/src/account/: js_bindings.rs  mod.rs  models.rs  utils.rs
crates/idxdb-store/src/chain_data/: js_bindings.rs  mod.rs  models.rs  utils.rs
crates/idxdb-store/src/export/: js_bindings.rs  mod.rs
crates/idxdb-store/src/import/: js_bindings.rs  mod.rs
crates/idxdb-store/src/js/: accounts.d.ts  accounts.js  accounts.js.map  auth.js  chainData.js  chainData.js.map  crypto.js  export.d.ts  export.js  import.d.ts  import.js  notes.d.ts  notes.js  notes.js.map  schema.d.ts  schema.js  schema.js.map  settings.d.ts  settings.js  settings.js.map  sync.d.ts  sync.js  sync.js.map  syncLock.js  transactions.js  transactions.js.map  transport.d.ts  transport.js  transport.js.map  utils.js
crates/idxdb-store/src/note/: js_bindings.rs  mod.rs  models.rs  utils.rs
crates/idxdb-store/src/settings/: js_bindings.rs  mod.rs  models.rs
crates/idxdb-store/src/sync/: js_bindings.rs  mod.rs  models.rs
crates/idxdb-store/src/transaction/: js_bindings.rs  mod.rs  models.rs  utils.rs
crates/idxdb-store/src/transport/: js_bindings.rs  mod.rs
crates/idxdb-store/src/ts/: accounts.test.ts  accounts.ts  auth.ts  chainData.test.ts  chainData.ts  crypto.ts  eslint.config.mjs  export.ts  notes.ts  (+12 more)
crates/indexed-db-store/: Cargo.toml
crates/indexed-db-store/src/: lib.rs
crates/js-export-macro/: Cargo.toml
crates/js-export-macro/src/: lib.rs
crates/miden-client/: Cargo.toml  README.md
crates/miden-client-sqlite-store/: Cargo.toml
crates/miden-client-sqlite-store/src/: lib.rs
crates/miden-client/src/: lib.rs
crates/miden-swapp/: Cargo.toml
crates/miden-swapp/src/: account.rs  pswap.rs
crates/node-client/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/node-client/src/: client.rs  error.rs  lib.rs
crates/node-client/test/: integration.mjs
crates/rpc-client/: Cargo.toml  README.md
crates/rpc-client/src/: lib.rs
crates/rust-client/: Cargo.toml  README.md  build.rs
crates/rust-client/src/: builder.rs  errors.rs  lib.rs  mock.rs  multisig.rs  rng.rs  tests.rs  utils.rs
crates/sqlite-store/: Cargo.toml  DESIGN.md  README.md
crates/sqlite-store/src/: account.rs  builder.rs  chain_data.rs  lib.rs  macros.rs  merkle_store.rs  migration_002.sql  migration_002_watched_accounts.sql  migration_003.sql  pswap.rs  settings.rs  smt_forest.rs  sql_error.rs  sql_types.rs  store.sql  sync.rs  transaction.rs  transport.rs
crates/testing/miden-client-tests/: Cargo.toml
crates/testing/node-builder/: Cargo.toml  README.md
crates/testing/prover/: Cargo.toml
crates/web-client/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts  rollup.config.js  rollup.config.node.js  test_scriptbuilder.mjs  tsconfig.docs.json  tsconfig.json  tsconfig.typecheck.json  typedoc.json
crates/web-client/docs/: debug.md  debug_wasm.md  simplified-api-proposal.md
crates/web-client/js/: asyncLock.js  client.js  constants.js  index.js  index.ts  node-entry.js  node-index.js  passkey-keystore.js  standalone.js  storageView.js  syncLock.js  utils.js  wasm.js  webLock.js
crates/web-client/scripts/: build-node.mjs  check-bindgen-types.js  check-method-classification.js  check-standalone-types.js
crates/web-client/src/: account.rs  conversions.rs  export.rs  helpers.rs  import.rs  keystore_api.rs  lib.rs  miden_array.rs  mock.rs  new_account.rs  new_transactions.rs  note_transport.rs  notes.rs  package.rs  platform.rs  prelude.rs  settings.rs  storage_reader.rs  sync.rs  tags.rs  thread_pool.rs  transactions.rs  web_keystore.rs  web_keystore_callbacks.rs  web_keystore_db.rs
crates/web-client/test/: README.md  account.test.ts  account_component.test.ts  account_file.test.ts  account_reader.test.ts  address.test.ts  api-types.check.ts  basic_fungible_faucet.test.ts  basic_fungible_faucet_component.test.ts  compile_and_contract.test.ts  counter_contract_fpi.test.ts  fpi.test.ts  global.test.d.ts  hardening.test.ts  import.test.ts  import_export.test.ts  key.test.ts  miden_array.test.ts  miden_client_api.test.ts  mocha.global.setup.mjs  mockchain.test.ts  multisig_component.test.ts  new_account.test.ts  new_transactions.test.ts  node-adapter.ts  note_file.test.ts  note_transport.test.ts  notes.test.ts  package.test.ts  passkey-keystore.test.ts  playwright.global.setup.ts  prune.test.ts  prune_account_history.test.ts  pswap_transactions.test.ts  remote_keystore.test.ts  remote_prover_transactions.test.ts  settings.test.ts  storage_view.test.ts  store_isolation.test.ts  swap_transactions.test.ts  (+9 more)
tests/: Cargo.toml  README.md
tests/config/: genesis_swap_test.toml
tests/integration/: common.rs  custom_transactions_tests.rs  fpi_tests.rs  main.rs  onchain_tests.rs
tests/src/: custom_transactions_tests.rs  fpi_tests.rs  lib.rs  main_tests.rs  multisig.rs  network_transaction_tests.rs  onchain_tests.rs  swap_transactions_tests.rs
(+1230 files in other folders)
