[workspace]
resolver = "2"

members = [
  "bin/integration-tests",
  "bin/miden-cli",
  "crates/idxdb-store",
  "crates/rust-client",
  "crates/sqlite-store",
  "crates/testing/miden-client-tests",
  "crates/testing/node-builder",
  "crates/testing/prover",
  "crates/web-client",
]

default-members = ["bin/miden-cli", "crates/rust-client"]

[workspace.package]
authors      = ["miden contributors"]
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/0xMiden/miden-client"
rust-version = "1.90"
version      = "0.13.0"

[profile.test-dev]
inherits  = "dev"
opt-level = 1

[workspace.dependencies]
# Miden protocol dependencies
miden-mast-package = { default-features = false, version = "0.20.1" }
miden-protocol     = { default-features = false, version = "0.13" }
miden-standards    = { default-features = false, version = "0.13" }
miden-testing      = { default-features = false, version = "0.13" }
miden-tx           = { default-features = false, version = "0.13" }

# Miden node dependencies
miden-node-block-producer        = { version = "0.13" }
miden-node-ntx-builder           = { version = "0.13" }
miden-node-proto-build           = { default-features = false, version = "0.13" }
miden-node-rpc                   = { version = "0.13" }
miden-node-store                 = { version = "0.13" }
miden-node-utils                 = { version = "0.13" }
miden-node-validator             = { version = "0.13" }
miden-note-transport-proto-build = { default-features = false, version = "0.2" }
miden-remote-prover              = { features = ["concurrent"], version = "0.13" }
miden-remote-prover-client       = { default-features = false, features = ["tx-prover"], version = "0.13" }

# External dependencies
anyhow      = { default-features = false, version = "1.0" }
async-trait = { version = "0.1" }
chrono      = { version = "0.4" }
hex         = { version = "0.4" }
miette      = { features = ["fancy"], version = "7.6" }
rand        = { version = "0.9" }
serde       = { features = ["derive"], version = "1.0" }
thiserror   = { default-features = false, version = "2.0" }
tokio       = { features = ["macros", "rt-multi-thread"], version = "1.48" }
tracing     = { version = "0.1" }

# Lints are set to warn for development, which are promoted to errors in CI.
[workspace.lints.clippy]
# Pedantic lints are set to a lower priority which allows lints in the group to be selectively enabled.
pedantic = { level = "warn", priority = -1 }
# cast_possible_truncation =   "allow"  # Overly many instances especially regarding indices.
ignored_unit_patterns       = "allow" # Stylistic choice.
missing_errors_doc          = "allow" # TODO: fixup and enable this.
missing_panics_doc          = "allow" # TODO: fixup and enable this.
module_name_repetitions     = "allow" # Many triggers, and is a stylistic choice.
must_use_candidate          = "allow" # This marks many fn's which isn't helpful.
should_panic_without_expect = "allow" # We don't care about the specific panic message.
# End of pedantic lints.
