[workspace]
resolver = "2"

members = [
  "bin/integration-tests",
  "bin/miden-bench",
  "bin/miden-cli",
  "crates/idxdb-store",
  "crates/rust-client",
  "crates/sqlite-store",
  "crates/testing/miden-client-tests",
  "crates/testing/node-builder",
  "crates/testing/prover",
  "crates/web-client",
]

default-members = ["bin/miden-cli", "crates/rust-client"]

[workspace.package]
authors      = ["miden contributors"]
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/0xMiden/miden-client"
rust-version = "1.93"
version      = "0.14.0"

[profile.dev]
codegen-units = 16

[profile.test-dev]
inherits  = "dev"
opt-level = 1

[workspace.dependencies]
# Workspace crates
idxdb-store               = { default-features = false, package = "miden-idxdb-store", path = "crates/idxdb-store", version = "0.14.0" }
miden-client              = { default-features = false, path = "crates/rust-client", version = "0.14.0" }
miden-client-sqlite-store = { default-features = false, path = "crates/sqlite-store", version = "0.14.0" }

# Miden protocol dependencies
miden-protocol  = { default-features = false, version = "0.14.0" }
miden-standards = { default-features = false, version = "0.14.0" }
miden-testing   = { default-features = false, version = "0.14.0" }
miden-tx        = { default-features = false, version = "0.14.0" }

# Miden node dependencies (from git branch until compatible crates.io release)
miden-node-block-producer = { git = "https://github.com/0xMiden/miden-node", rev = "c2d61c0eee9f81dd6335ed51c3424a9bd5e34dd8" }
miden-node-ntx-builder = { git = "https://github.com/0xMiden/miden-node", rev = "c2d61c0eee9f81dd6335ed51c3424a9bd5e34dd8" }
miden-node-proto = { git = "https://github.com/0xMiden/miden-node", rev = "c2d61c0eee9f81dd6335ed51c3424a9bd5e34dd8" }
miden-node-proto-build = { default-features = false, git = "https://github.com/0xMiden/miden-node", rev = "c2d61c0eee9f81dd6335ed51c3424a9bd5e34dd8" }
miden-node-rpc = { git = "https://github.com/0xMiden/miden-node", rev = "c2d61c0eee9f81dd6335ed51c3424a9bd5e34dd8" }
miden-node-store = { git = "https://github.com/0xMiden/miden-node", rev = "c2d61c0eee9f81dd6335ed51c3424a9bd5e34dd8" }
miden-node-utils = { git = "https://github.com/0xMiden/miden-node", rev = "c2d61c0eee9f81dd6335ed51c3424a9bd5e34dd8" }
miden-node-validator = { git = "https://github.com/0xMiden/miden-node", rev = "c2d61c0eee9f81dd6335ed51c3424a9bd5e34dd8" }
miden-note-transport-proto-build = { default-features = false, version = "0.2" }
miden-remote-prover-client = { default-features = false, features = [
  "tx-prover",
], git = "https://github.com/0xMiden/miden-node", rev = "c2d61c0eee9f81dd6335ed51c3424a9bd5e34dd8" }

# Miden debug dependency
miden-debug = { default-features = false, features = ["dap", "std"], path = "../miden-debug" }

# External dependencies
anyhow      = { default-features = false, version = "1.0" }
async-trait = { version = "0.1" }
chrono      = { version = "0.4" }
hex         = { version = "0.4" }
miette      = { features = ["fancy"], version = "7.6" }
rand        = { version = "0.9" }
serde       = { features = ["derive"], version = "1.0" }
thiserror   = { default-features = false, version = "2.0" }
tokio       = { features = ["macros", "rt-multi-thread"], version = "1.48" }
tracing     = { version = "0.1" }

# Lints are set to warn for development, which are promoted to errors in CI.
[workspace.lints.clippy]
# Pedantic lints are set to a lower priority which allows lints in the group to be selectively enabled.
pedantic = { level = "warn", priority = -1 }
# cast_possible_truncation =   "allow"  # Overly many instances especially regarding indices.
ignored_unit_patterns       = "allow" # Stylistic choice.
missing_errors_doc          = "allow" # TODO: fixup and enable this.
missing_panics_doc          = "allow" # TODO: fixup and enable this.
module_name_repetitions     = "allow" # Many triggers, and is a stylistic choice.
must_use_candidate          = "allow" # This marks many fn's which isn't helpful.
should_panic_without_expect = "allow" # We don't care about the specific panic message.
# End of pedantic lints.

[patch.crates-io]
miden-protocol = { git = "https://github.com/0xMiden/protocol", rev = "163c54951daadb2b801e7e3b5c004821dc02e4b7" }
miden-standards = { git = "https://github.com/0xMiden/protocol", rev = "163c54951daadb2b801e7e3b5c004821dc02e4b7" }
miden-testing = { git = "https://github.com/0xMiden/protocol", rev = "163c54951daadb2b801e7e3b5c004821dc02e4b7" }
miden-tx = { git = "https://github.com/0xMiden/protocol", rev = "163c54951daadb2b801e7e3b5c004821dc02e4b7" }

[patch."https://github.com/0xMiden/miden-base"]
miden-protocol = { git = "https://github.com/0xMiden/protocol", rev = "163c54951daadb2b801e7e3b5c004821dc02e4b7" }
miden-standards = { git = "https://github.com/0xMiden/protocol", rev = "163c54951daadb2b801e7e3b5c004821dc02e4b7" }
miden-testing = { git = "https://github.com/0xMiden/protocol", rev = "163c54951daadb2b801e7e3b5c004821dc02e4b7" }
miden-tx = { git = "https://github.com/0xMiden/protocol", rev = "163c54951daadb2b801e7e3b5c004821dc02e4b7" }
