[workspace]
resolver = "2"

members = [
  "bin/integration-tests",
  "bin/miden-bench",
  "bin/miden-cli",
  "crates/rust-client",
  "crates/sqlite-store",
  "crates/testing/miden-client-tests",
  "crates/testing/node-builder",
  "crates/testing/prover",
]

default-members = ["bin/miden-cli", "crates/rust-client"]

[workspace.package]
authors      = ["miden contributors"]
edition      = "2024"
license      = "MIT"
repository   = "https://github.com/0xMiden/miden-client"
rust-version = "1.93"
version      = "0.15.0"

[profile.dev]
codegen-units = 16

[profile.test-dev]
inherits  = "dev"
opt-level = 1

[workspace.dependencies]
# Workspace crates
miden-client              = { default-features = false, path = "crates/rust-client", version = "0.15.0" }
miden-client-sqlite-store = { default-features = false, path = "crates/sqlite-store", version = "0.15.0" }

# Miden protocol dependencies
miden-protocol        = { branch = "next", default-features = false, git = "https://github.com/0xMiden/protocol.git" }
miden-standards       = { branch = "next", default-features = false, git = "https://github.com/0xMiden/protocol.git" }
miden-testing         = { branch = "next", default-features = false, git = "https://github.com/0xMiden/protocol.git" }
miden-tx              = { branch = "next", default-features = false, git = "https://github.com/0xMiden/protocol.git" }
miden-tx-batch-prover = { branch = "next", default-features = false, git = "https://github.com/0xMiden/protocol.git" }

# Miden node dependencies
miden-node-block-producer = { branch = "jmunoz-update-miden-deps", git = "https://github.com/0xMiden/node.git" }
miden-node-proto = { branch = "jmunoz-update-miden-deps", git = "https://github.com/0xMiden/node.git" }
miden-node-proto-build = { branch = "jmunoz-update-miden-deps", default-features = false, git = "https://github.com/0xMiden/node.git" }
miden-node-rpc = { branch = "jmunoz-update-miden-deps", git = "https://github.com/0xMiden/node.git" }
miden-node-store = { branch = "jmunoz-update-miden-deps", git = "https://github.com/0xMiden/node.git" }
miden-node-utils = { branch = "jmunoz-update-miden-deps", git = "https://github.com/0xMiden/node.git" }
miden-note-transport-proto-build = { default-features = false, version = "0.2" }
miden-ntx-builder = { branch = "jmunoz-update-miden-deps", git = "https://github.com/0xMiden/node.git" }
miden-remote-prover-client = { branch = "jmunoz-update-miden-deps", default-features = false, features = [
  "tx-prover",
], git = "https://github.com/0xMiden/node.git" }
miden-validator = { branch = "jmunoz-update-miden-deps", git = "https://github.com/0xMiden/node.git" }

# Miden debug dependency
miden-debug        = { default-features = false, features = ["dap", "std"], version = "0.7" }
miden-debug-types  = { default-features = false, version = "0.22" }
miden-mast-package = { default-features = false, version = "0.22" }
miden-processor    = { default-features = false, version = "0.22" }

# External dependencies
anyhow             = { default-features = false, version = "1.0" }
assert_cmd         = { version = "2.0" }
async-trait        = { version = "0.1" }
chrono             = { version = "0.4" }
clap               = { version = "4.5" }
comfy-table        = { version = "7.1" }
hex                = { version = "0.4" }
miette             = { features = ["fancy"], version = "7.6" }
predicates         = { version = "3.0" }
prost              = { default-features = false, version = "0.14" }
rand               = { version = "0.9" }
rand_chacha        = { version = "0.9" }
regex              = { version = "1.0" }
rstest             = { version = "0.25" }
serde              = { features = ["derive"], version = "1.0" }
serde_json         = { version = "1.0" }
tempfile           = { version = "3.0" }
thiserror          = { default-features = false, version = "2.0" }
tokio              = { features = ["macros", "rt-multi-thread"], version = "1.48" }
tonic              = { default-features = false, version = "0.14" }
tracing            = { version = "0.1" }
tracing-subscriber = { default-features = false, version = "0.3" }
uuid               = { version = "1.10" }

# Lints are set to warn for development, which are promoted to errors in CI.
[workspace.lints.clippy]
# Pedantic lints are set to a lower priority which allows lints in the group to be selectively enabled.
pedantic = { level = "warn", priority = -1 }
# cast_possible_truncation =   "allow"  # Overly many instances especially regarding indices.
ignored_unit_patterns       = "allow" # Stylistic choice.
missing_errors_doc          = "allow" # TODO: fixup and enable this.
missing_panics_doc          = "allow" # TODO: fixup and enable this.
module_name_repetitions     = "allow" # Many triggers, and is a stylistic choice.
must_use_candidate          = "allow" # This marks many fn's which isn't helpful.
should_panic_without_expect = "allow" # We don't care about the specific panic message.
# End of pedantic lints.
