[package]
authors.workspace      = true
description            = "Integration Tests for the miden client library and CLI"
edition.workspace      = true
license.workspace      = true
name                   = "miden-client-tests"
publish                = false
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
# Workspace dependencies
miden-client-integration-tests = { path = "../bin/integration-tests" }

[dev-dependencies]
tokio = { workspace = true }

[[test]]
name = "integration"
path = "src/main_tests.rs"
