[package]
name = "miden-bindings-macro"
version = "0.1.0"
edition = "2021"
description = "Proc macro for unified wasm-bindgen and napi-derive bindings"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
