[package]
name = "indexed-db-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "IndexedDB-backed Store implementation for miden-client (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
miden-client = { path = "../rust-client", version = "0.12", default-features = false }
miden-objects = { workspace = true }
miden-tx      = { workspace = true }

anyhow      = { workspace = true }
async-trait = { workspace = true }
base64      = { version = "0.22" }
getrandom   = { features = ["wasm_js"], version = "0.3" }
serde       = { workspace = true, features = ["derive"] }
serde-wasm-bindgen   = { version = "0.6" }
thiserror   = { workspace = true }
tracing     = { workspace = true }
wasm-bindgen         = { features = ["serde-serialize"], version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { features = ["Storage", "Window", "console"], version = "0.3" }

[lints]
workspace = true
