[package]
authors.workspace      = true
description            = "IndexedDB-backed Store implementation for miden-client (WASM)"
edition.workspace      = true
license.workspace      = true
name                   = "indexed-db-store"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
miden-client  = { default-features = false, path = "../rust-client", version = "0.12" }
miden-objects = { workspace = true }
miden-tx      = { workspace = true }

async-trait          = { workspace = true }
base64               = { version = "0.22" }
chrono               = { workspace = true }
serde                = { features = ["derive"], workspace = true }
serde-wasm-bindgen   = { version = "0.6" }
wasm-bindgen         = { features = ["serde-serialize"], version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { features = ["Storage", "Window", "console"], version = "0.3" }

[lints]
workspace = true
