[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name              = "js-export-macro"
publish           = false
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { features = ["full", "visit-mut"], version = "2" }
