[package]
authors.workspace    = true
description          = "Proc macro for dual wasm-bindgen/napi annotations via #[js_export]"
edition.workspace    = true
keywords             = ["miden", "wasm", "napi", "macro"]
license.workspace    = true
name                 = "js-export-macro"
repository.workspace = true
version.workspace    = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { features = ["full", "visit-mut"], version = "2" }
