[package]
name = "miden-swapp"
version = "0.1.0"
edition = "2024"

[dependencies]
miden-protocol = { version = "0.13", default-features = false }
miden-mast-package = { version = "0.20", default-features = false }
miden-core = { version = "0.20", default-features = false }
miden-crypto = { version = "0.19", default-features = false }
miden-standards = { version = "0.13", default-features = false }

[dev-dependencies]
miden-protocol = { version = "0.13", features = ["testing"] }
miden-testing = "0.13.3"
anyhow = "1"
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }

[features]
default = []
std = [
    "miden-protocol/std",
    "miden-standards/std",
]
