[package]
authors.workspace      = true
description            = "Native Node.js addon for interacting with the Miden network via napi-rs"
edition.workspace      = true
license.workspace      = true
name                   = "miden-node-client"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
crate-type = ["cdylib"]

[features]
testing = ["miden-client/testing"]

[dependencies]
# Miden dependencies
miden-client              = { features = ["std", "tonic"], workspace = true }
miden-client-sqlite-store = { workspace = true }
miden-protocol            = { workspace = true }

# External dependencies
hex      = { workspace = true }
napi     = { features = ["async", "napi6", "serde-json"], version = "3" }
napi-derive = { version = "3" }
rand     = { workspace = true }
serde    = { workspace = true }
serde_json = { version = "1.0" }
thiserror = { workspace = true }
tokio    = { workspace = true }

[build-dependencies]
napi-build = { version = "2" }

[lints]
workspace = true
