[package]
authors.workspace      = true
description            = "RPC client for Miden network"
edition.workspace      = true
license.workspace      = true
name                   = "miden-rpc-client"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
crate-type = ["lib"]

[dependencies]
miden-objects = { workspace = true }
miden-node-proto = { branch = "next", git = "https://github.com/0xMiden/miden-node" }

tonic = { version = "0.13", features = ["tls-native-roots", "tls-ring", "transport"] }
tokio = { workspace = true }
hex = { workspace = true }
