[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Client library that facilitates interaction with the Miden network"
documentation          = "https://docs.rs/miden-client"
edition.workspace      = true
keywords               = ["client", "miden"]
license.workspace      = true
name                   = "miden-client"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
# "prost-types" and "tonic-prost" are ignored because they are needed by the generated proto bindings.
ignored = ["getrandom", "prost-types", "tonic-prost"]

[package.metadata.cargo-shear]
# getrandom is used through rand's wasm backend selection. The other entries are used by
# generated proto bindings and std-only keystore code that shear does not fully resolve.
ignored = ["getrandom", "prost-types", "serde", "serde_json", "tempfile", "tonic-prost"]

[lib]
crate-type = ["lib"]

[features]
dap = ["dep:miden-debug"]
default = ["dap", "std"]
std = [
  "dep:tempfile",
  "dep:tokio",
  "miden-protocol/std",
  "miden-remote-prover-client/std",
  "miden-remote-prover-client/tx-prover",
  "miden-tx/concurrent",
  "tonic/tls-native-roots",
  "tonic/tls-ring",
  "tonic/transport",
]
testing = ["dep:miden-testing", "dep:uuid", "miden-protocol/testing", "miden-standards/testing", "miden-tx/testing"]
tonic = []

[dependencies]
# Miden dependencies
miden-debug                = { optional = true, workspace = true }
miden-protocol             = { workspace = true }
miden-remote-prover-client = { default-features = false, features = ["tx-prover"], workspace = true }
miden-standards            = { workspace = true }
miden-testing              = { optional = true, workspace = true }
miden-tx                   = { workspace = true }

# External dependencies
anyhow       = { workspace = true }
async-trait  = { workspace = true }
chrono       = { workspace = true }
futures      = { version = "0.3" }
hex          = { workspace = true }
prost        = { features = ["derive"], workspace = true }
prost-types  = { version = "0.14" }
rand         = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tempfile     = { optional = true, workspace = true }
thiserror    = { workspace = true }
tokio        = { features = ["time"], optional = true, workspace = true }
tonic        = { features = ["codegen"], workspace = true }
tonic-health = { version = "0.14" }
tonic-prost  = { version = "0.14" }
tracing      = { workspace = true }
uuid         = { features = ["js", "serde", "v4"], optional = true, workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom             = { features = ["wasm_js"], version = "0.3" }
gloo-timers           = { features = ["futures"], version = "0.3" }
tonic-web-wasm-client = { default-features = false, version = "0.9" }

[build-dependencies]
miden-node-proto-build           = { workspace = true }
miden-note-transport-proto-build = { workspace = true }
miden-protocol                   = { workspace = true }
miden-standards                  = { workspace = true }
miette                           = { workspace = true }
prost                            = { features = ["derive"], workspace = true }
tonic-prost-build                = { version = "0.14" }

[dev-dependencies]
miden-protocol  = { default-features = false, features = ["testing"], workspace = true }
miden-standards = { features = ["testing"], workspace = true }
miden-testing   = { default-features = false, workspace = true }
tokio           = { workspace = true }

[lints]
workspace = true
